src/tests/array_expression/snapshots/monkey_interpreter__tests__array_expression__test_array_expression_case_1_lexical_analysis.snap
---
source: src/tests/array_expression/mod.rs
expression: tokens
---
[
    OpeningSquareBracket,
    Integer {
        literal: 1,
    },
    Comma,
    Integer {
        literal: 2,
    },
    Comma,
    Integer {
        literal: 3,
    },
    ClosingSquareBracket,
    EndOfFile,
]
