src/tests/array_expression/snapshots/monkey_interpreter__tests__array_expression__test_array_expression_case_1_syntax_analysis.snap
---
source: src/tests/array_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Expression {
        expression: Array {
            elements: [
                Integer {
                    literal: 1,
                },
                Integer {
                    literal: 2,
                },
                Integer {
                    literal: 3,
                },
            ],
        },
    },
]
